# uringio

./: .clang-format  Cargo.toml  README.md  shell.nix
.cargo/: config.toml
crates/lib/: Cargo.toml
crates/lib/src/: log.rs
crates/uringio/: Cargo.toml
crates/uringio-macro/: Cargo.toml
crates/uringio-macro/src/: lib.rs  operator.rs
crates/uringio-macro/src/operator/: attr.rs  item.rs  setter.rs
crates/uringio/src/: arena.rs  completion.rs  lib.rs  mmap_arena.rs  operator.rs  platform.rs  register.rs  shared.rs  submission.rs  uring.rs
crates/uringio/src/arena/: huge.rs  mmap.rs
crates/uringio/src/completion/: collector.rs  entry.rs  queue.rs
crates/uringio/src/operator/: fd.rs  fs.rs  nop.rs  opcode.rs  read.rs
crates/uringio/src/operator/fs/: read.rs
crates/uringio/src/operator/noop/: nop.rs  nop128.rs
crates/uringio/src/operator/nop/: nop.rs  nop128.rs
crates/uringio/src/platform/: io.rs  iouring.rs  mmap.rs
crates/uringio/src/register/: args.rs  ring_fds.rs
crates/uringio/src/shared/: constant.rs  error.rs  macros.rs  null.rs
crates/uringio/src/submission/: entry.rs  index.rs  queue.rs  submitter.rs
crates/uringio/src/uring/: args.rs  enter.rs  feat.rs  mode.rs
crates/uringio/tests/: readme.rs
docker/devenv/: init.sh
