[workspace]
members  = ["crates/*"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# Member
uringio = { path = "crates/uringio", version = "0.1.0" }

clap               = { default-features = false, version = "4.5" }
config             = { default-features = false, version = "0.15" }
mimalloc           = { default-features = false, version = "0.1" }
serde              = { default-features = false, version = "1" }
thiserror          = { default-features = false, version = "2.0" }
tracing            = { default-features = false, version = "0.1" }
tracing-subscriber = { default-features = false, version = "0.3" }

# Build

# Test
insta = { default-features = false, version = "1.44" }


[patch.crates-io]


[workspace.lints.rust]
unused_must_use = "allow"


[workspace.lints.clippy]
pedantic = "warn"

default_trait_access     = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_safety_doc       = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
return_self_not_must_use = { level = "allow", priority = 1 }
wildcard_imports         = { level = "allow", priority = 1 }


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true
