[package]
name = "lib"

description = "lib"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default  = []
mimalloc = ["dep:mimalloc"]


[lints]
workspace = true


[dependencies]
mimalloc           = { workspace = true, optional = true }
tracing            = { workspace = true, features = ["attributes", "release_max_level_info"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "smallvec", "std", "tracing-log"] }
