[package]
name = "uringio"

description = "uringio"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = ["features-checker", "unstable-toolchain"]

features-checker   = []
mimalloc           = ["dep:mimalloc"]
unstable-toolchain = []


[lints]
workspace = true


[dependencies]
uringio-macro = { workspace = true }

mimalloc           = { workspace = true, optional = true }
tracing            = { workspace = true, features = ["attributes", "release_max_level_info"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "smallvec", "std", "tracing-log"] }

rustix = { version = "1.1.3", default-features = false, features = ["io_uring", "mm", "param", "std"], git = "ssh://git@github.com/h3clabs/rustix.git", branch = "main" }
